addons/traefik/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-example
  annotations:
spec:
  rules:
  - host: traefik.example.net
    http:
      paths:
      - backend:
          serviceName: traefik-web-ui
          servicePort: 8080
